--- a/tests/example_files.yaml
+++ b/tests/example_files.yaml
@@ -112,3 +112,5 @@
   url: https://github.com/py-pdf/pypdf/files/12050253/tt.pdf
 - local_filename: Pesquisa-de-Precos-Combustiveis-novembro-2023.pdf
   url: https://www.joinville.sc.gov.br/wp-content/uploads/2023/11/Pesquisa-de-Precos-Combustiveis-novembro-2023.pdf
+- local_filename: iss2138.pdf
+  url: https://github.com/py-pdf/pypdf/files/12483807/AEO.1172.pdf
