--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -164,6 +164,10 @@ jobs:
     - name: Test with mypy
       run : |
         mypy pypdf
+    - name: Test docs build
+      run: |
+        pip install -r requirements/docs.txt
+        sphinx-build -n -W --keep-going -T -b html docs build/sphinx/html
 
   package:
     name: Build & verify package
