--- a/tests/example_files.yaml
+++ b/tests/example_files.yaml
@@ -93,7 +93,7 @@
 - local_filename: o1whh9b3.pdf
   url: https://github.com/py-pdf/pypdf/files/11578953/USC.EMBA.-.Pre-Season.and.Theme.I.pdf
 - local_filename: selbst.72916.pdf
-  url: https://www.selbst.de/paidcontent/dl/64733/72916
+  url: https://github.com/py-pdf/pypdf/files/14395695/selbst.72916.pdf
 - local_filename: iss1912.pdf
   url: https://github.com/py-pdf/pypdf/files/11845099/GeoTopo-komprimiert.pdf
 - local_filename: calRGB.pdf
