--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -5,12 +5,14 @@ name: CI
 
 on:
   push:
-    branches: [ main, 2.0.0-dev ]
+    branches:
+      - main
     paths-ignore:
       - '**/*.md'
       - '**/*.rst'
   pull_request:
-    branches: [ main, 2.0.0-dev ]
+    branches:
+      - main
     paths-ignore:
       - '**/*.md'
       - '**/*.rst'
