--- a/.github/workflows/github-ci.yaml
+++ b/.github/workflows/github-ci.yaml
@@ -127,8 +127,12 @@ jobs:
     - name: Test with pytest
       run: |
         python -m pytest tests --cov=pypdf --cov-append -n auto -vv
+    - name: Check coverage data file
+      run: find .  -printf '%f     %a       %s\n' -iname '*coverage*'
     - name: Rename coverage data file
       run: mv .coverage ".coverage.$RANDOM"
+    - name: Check coverage data file
+      run: find .  -printf '%f     %a       %s\n' -iname '*coverage*'
     - name: Upload coverage data
       uses: actions/upload-artifact@v4
       with:
@@ -206,6 +210,9 @@ jobs:
           python-version: ${{env.PYTHON_LATEST}}
 
       - run: python -m pip install --upgrade coverage[toml]
+
+      - name: Check coverage data file
+        run: find .  -printf '%f     %a       %s\n' -iname '*coverage*'
 
       - uses: actions/download-artifact@v4
         with:
