--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ classifiers = [
 
 dependencies = [
     "typing_extensions >= 4.0; python_version < '3.11'",
-    "dataclasses",
+    "dataclasses; python_version < '3.7'",
 ]
 
 [project.urls]
@@ -46,10 +46,10 @@ full = [
     "Pillow>=8.0.0",
 ]
 crypto = [
-    "cryptography; python_version >= '3.8'",
-    "PyCryptodome; python_version >= '3.6'",
+    "cryptography; python_version >= '3.7'",
+    "PyCryptodome; python_version == '3.6'",
 ]
-image = ["Pillow>=10.3.0"]
+image = ["Pillow>=8.0.0"]
 dev = ["black", "pip-tools", "pre-commit<2.18.0", "pytest-cov", "pytest-socket", "pytest-timeout", "flit", "wheel", "pytest-xdist"]
 docs = ["sphinx", "sphinx_rtd_theme", "myst_parser"]
 
