--- a/pyproject.toml
+++ b/pyproject.toml
@@ -62,7 +62,7 @@ package = "./pypdf"
 
 [tool.flit.sdist]
 exclude = [".github/*", "docs/*", "sample-files/.github/*", "sample-files/.gitignore", "sample-files/.pre-commit-config.yaml",  "requirements/*", ".flake8", ".gitignore", ".gitmodules", ".pylintrc", "tox.ini", "make_release.py", "mutmut-test.sh", ".pre-commit-config.yaml", ".gitblame-ignore-revs", "Makefile", "mutmut_config.py"]
-include = ["resources/", "tests/", "sample-files/"]
+include = ["resources/", "tests/"]
 
 [tool.pytest.ini_options]
 addopts = "--disable-socket"
