--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -26,7 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install requirements (Python 3)
       run: |
-        pip install -r requirements/ci.txt
+        pip install -r requirements/ci-3.11.txt
     - name: Install pypdf
       run: |
         pip install .
