--- a/.github/workflows/benchmark.yaml
+++ b/.github/workflows/benchmark.yaml
@@ -14,7 +14,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        python-version: ["3.10"]
+        python-version: ["3.x"]
     steps:
     - name: Checkout Code
       uses: actions/checkout@v4
@@ -26,7 +26,7 @@ jobs:
         python-version: ${{ matrix.python-version }}
     - name: Install requirements (Python 3)
       run: |
-        pip install -r requirements/ci.txt
+        pip install -r requirements/ci-3.11.txt
     - name: Install pypdf
       run: |
         pip install .
