--- a/pyproject.toml
+++ b/pyproject.toml
@@ -113,6 +113,8 @@ exclude_lines = [
 
 [tool.ruff]
 line-length = 120
+
+[tool.ruff.lint]
 select = ["ALL"]
 ignore = [
     "D404",  # First word of the docstring should not be "This"
@@ -193,10 +195,10 @@ ignore = [
     "PT014",  # Duplicate of test case at index 1 in `@pytest_mark.parametrize`
 ]
 
-[tool.ruff.mccabe]
+[tool.ruff.lint.mccabe]
 max-complexity = 54  # Recommended: 10
 
-[tool.ruff.per-file-ignores]
+[tool.ruff.lint.per-file-ignores]
 "_cryptography.py" = ["S304", "S305"]  # Use of insecure cipher / modes, aka RC4 and AES-ECB
 "_encryption.py" = ["S324"]
 "_writer.py" = ["S324"]
@@ -208,7 +210,7 @@ max-complexity = 54  # Recommended: 10
 "tests/*" = ["S101", "ANN001", "ANN201","D104", "S105", "S106", "D103", "B018", "B017"]
 "tests/test_workflows.py" =  ["T201"]
 
-[tool.ruff.pylint]
+[tool.ruff.lint.pylint]
 allow-magic-value-types = ["bytes", "float", "int", "str"]
 max-args = 12  # Recommended: 5
 max-branches = 36  # Recommended: 12
